-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
-
b09
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8365706 | 25.0.2 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
A DESCRIPTION OF THE PROBLEM :
Specifying AOTCacheOutput with a blank path causes the JVM to crash and generate a hs_err file.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Run the java command with an empty path for the AOT cache output file `java -XX:AOTCacheOutput=`
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
When the `=` sign is omitted, the output is "Improperly specified VM option 'AOTCacheOutput'", which is what I would expect if the path is blank.
ACTUAL -
#
# A fatal error has been detected by the Java Runtime Environment:
#
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffe2846e0f6, pid=9636, tid=9892
#
# JRE version: (25.0+32) (build )
# Java VM: OpenJDK 64-Bit Server VM (25-ea+32-3464, mixed mode, sharing, tiered, compressed class ptrs, unknown gc, windows-amd64)
# Problematic frame:
# C [VCRUNTIME140.dll+0xe0f6]
---------- BEGIN SOURCE ----------
None required.
---------- END SOURCE ----------
Specifying AOTCacheOutput with a blank path causes the JVM to crash and generate a hs_err file.
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Run the java command with an empty path for the AOT cache output file `java -XX:AOTCacheOutput=`
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
When the `=` sign is omitted, the output is "Improperly specified VM option 'AOTCacheOutput'", which is what I would expect if the path is blank.
ACTUAL -
#
# A fatal error has been detected by the Java Runtime Environment:
#
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffe2846e0f6, pid=9636, tid=9892
#
# JRE version: (25.0+32) (build )
# Java VM: OpenJDK 64-Bit Server VM (25-ea+32-3464, mixed mode, sharing, tiered, compressed class ptrs, unknown gc, windows-amd64)
# Problematic frame:
# C [VCRUNTIME140.dll+0xe0f6]
---------- BEGIN SOURCE ----------
None required.
---------- END SOURCE ----------
- backported by
-
JDK-8365706 Specifying AOTCacheOutput with a blank path causes the JVM to crash
-
- Resolved
-
- caused by
-
JDK-8355798 Implement JEP 514: Ahead-of-Time Command Line Ergonomics
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u/f9d3489e
-
Commit(master)
openjdk/jdk/ea754316
-
Review(master)
openjdk/jdk25u/91
-
Review(master)
openjdk/jdk/26518
(1 links to)