8363928: Specifying AOTCacheOutput with a blank path causes the JVM to crash